Prepare files for GitHub Pages deployment

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
         <button id="export-json">Export JSON</button>
     </div>
 
-    <div id="taxonomy-tree">
+    <div id="stats-container" class="stats">
+        <!-- Statistics will be loaded here -->
+    </div>
+
+    <div id="taxonomy-tree" spellcheck="false">
         <!-- Tree will be loaded here by JavaScript -->
         Loading...
     </div>
